2003-07-31  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp game.cpp
	  - support for multiple cloud textures and one new cloud texture.

2003-07-30  Thorsten Jordan <thorsten_jordan@gmx.de>
	* game.cpp submarine.cpp
	  - moved dc explosion dependend parts to submarine.cpp
	    and improved damage calculation.
	* system.cpp
	  - write_console new parameter: write to file only.

2003-07-28  Thorsten Jordan <thorsten_jordan@gmx.de>
	* torpedo.cpp user_interface.cpp
	  - introduced new torpedo types. Now all historical types available
	    with authentic data, except T4 (Falke) sensors.
	* depth_charge.cpp
	  - fixed bug: depth charges were never removed and kept falling and
	    exploding eternally.
	* sound.cpp subsim.cpp
	  - option to disable sound.
	  - fixed sound bug, SDL audio gots initialized whenever a sample was
	    constructed
	  - also a (more paranoid) check has been added to avoid array out
	    of bounds bug
	* submarine.cpp
	  - first bits of damage simulation.

2003-07-27  Thorsten Jordan <thorsten_jordan@gmx.de>
	* torpedo.cpp submarine_interface.cpp submarine.cpp
	  - FAT/LUT programmable and simulated.
	  - Now all torpedo types are simulated.

2003-07-27  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - ships are selectable by clicking on the map.
	* submarine_interface.cpp
	  - first bits of torpedo programming interface for FATs.
	  - turn switches are drawn and are turnable.

2003-07-27  Thorsten Jordan <thorsten_jordan@gmx.de>
	* game.cpp
	  - some preparations for damage simulation

2003-07-26  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - new panel design, panel features resize, hiding planned.

2003-07-25  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - introduced fog.
	* game.cpp
	  - fixed cloud clip bug.

2003-07-23  Thorsten Jordan <thorsten_jordan@gmx.de>
	* Improved conning tower model with textures.

2003-07-22  Thorsten Jordan <thorsten_jordan@gmx.de>